# compositionaldust

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/compositionaldust/: __init__.py  cpd.py  generate.py  utils.py
src/compositionaldust/core/: cost_symbolic.pxd  cost_symbolic.pyx  dust.pyx  random.pxd  random.pyx  utils.pxd  utils.pyx
