[metadata]
name = compositionaldust
version = 0.1
description = An Efficient Algorithm For Exact Segmentation of Large Compositional and Categorical Time Series

[options]
zip_safe = True
include_package_data = False
python_requires = >= 3.6
install_requires =
    numpy==1.26.4
    ruptures
    scikit-learn
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[build_ext]
inplace=1